Release 5.0.12 (Unreleased)
===========================

Documentation updates
---------------------

- Add P1 interpolation example for probes output.

Release 5.0.11 (Sep 26 2019)
============================

Bug fixes
---------

- Fix crash in ouptut of postprocessing files with subdivided polyhedra
  or polygons in serial mode.

- GUI convergence tracker: fix crash when changing font (GitHub issue #49).

- Fix for crash reading some CGNS files.

- Fix error in some cases of local mesh renumbering using space-filling
  curves (performance tuning, not active by default).

- Fix shifted index in imposed pressure outlet (GUI).

- P1 radiative transfer model: fix computation of incident flux.

- Avoid possible crash with some Fortran compilers in wall boundary
  condition code when the transient turbomachinery model is not active.

- Fix restart of time moments defined by starting physical time.

- GUI: fix reading of reconstruction flux option for pressure and hydraulic
  head. It was not possible to disable flux reconstruction using the GUI for
  these variables.

- Run script: fix overwriting of preprocessing mesh orientation output
  in case of multiple input meshes (Mantis issue #226).

Architectural changes
---------------------

- Fix compilation with gcc 9 and OpenMP support enabled.

- Shared library numbering for libsaturne.so now set to 5.0 to avoid confusion
  with other versions of the 5.x series.

Release 5.0.10 (May 6 2019)
===========================

Bug fixes
---------

- Lagrangian module: fix crash in coal or biomass evolution model.

- Lagrangian module with deposition: fix use of wrong Eulerian
  fluid velocity in some terms.

- Fix in ALE wall BCs.

- GUI reader: fix for cases with multiple mapped inlets.

- Work around possible Intel icc compiler bug in least-squares vector
  gradient (observed on v6.0 with icc 18.0.1 20171018).

- Avoid opening residuals.csv from all ranks.
